--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+
     <div class="game-board" id="gameBoard">
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
@@ -16,9 +17,10 @@
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>data-cell></div>
+        <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
     </div>
+
     <p id="message"></p>
     <button id="restartButton">Restart Game</button>
 
